package jp.example.design.adapter

data class Light (val amount: Int)
