package jp.example.design.adapter

class LightBulb {
    fun flash() = Light(30)
}
